--- a/PhotoJournal/Base.lproj/Main.storyboard
+++ b/PhotoJournal/Base.lproj/Main.storyboard
@@ -136,9 +136,9 @@
                                         </connections>
                                     </barButtonItem>
                                     <barButtonItem style="plain" systemItem="flexibleSpace" id="rLV-II-uME"/>
-                                    <barButtonItem systemItem="camera" id="dwl-gY-3c5">
+                                    <barButtonItem style="plain" systemItem="camera" id="mRC-ot-7Ta">
                                         <connections>
-                                            <action selector="cameraButtonPressed:" destination="0kT-Py-7a1" id="YQu-aJ-eS5"/>
+                                            <action selector="cameraPressed:" destination="Oz4-iC-yXE" id="kfN-AD-63Q"/>
                                         </connections>
                                     </barButtonItem>
                                 </items>
@@ -161,7 +161,7 @@
                             </stackView>
                             <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" text="Enter photo description... " textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="s5t-dB-lea">
                                 <rect key="frame" x="0.0" y="50" width="375" height="120"/>
-                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <color key="backgroundColor" red="1" green="0.91127179169999994" blue="0.88194161059999998" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="120" id="a1U-dN-SOV"/>
                                 </constraints>
@@ -197,6 +197,7 @@
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="qrB-0n-zGp" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <exit id="Oz4-iC-yXE" userLabel="Exit" sceneMemberID="exit"/>
             </objects>
             <point key="canvasLocation" x="820" y="139.880059970015"/>
         </scene>
