--- a/PhotoJournal/Base.lproj/Main.storyboard
+++ b/PhotoJournal/Base.lproj/Main.storyboard
@@ -53,7 +53,7 @@
                                                     <rect key="frame" x="256" y="269" width="46" height="30"/>
                                                     <state key="normal" title=". . . "/>
                                                     <connections>
-                                                        <action selector="optionsButton:" destination="gho-KT-Wwc" eventType="touchUpInside" id="QVU-jh-0zK"/>
+                                                        <action selector="optionsButton:" destination="BYZ-38-t0r" eventType="touchUpInside" id="hlm-sO-1Xo"/>
                                                     </connections>
                                                 </button>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="nVr-9G-84k">
